# customer-portal

./: README.md  pyproject.toml
zentryx_customer_portal/: MANIFEST.in  api.py  boot.py  hooks.py  install.py  patches.txt  permissions.py  sync.py
zentryx_customer_portal/doctype/customer_document/: customer_document.py
zentryx_customer_portal/doctype/customer_portal_settings/: customer_portal_settings.json
zentryx_customer_portal/doctype/internal_portal_user/: internal_portal_user.json  internal_portal_user.py
zentryx_customer_portal/doctype/portal_announcement/: portal_announcement.json
zentryx_customer_portal/doctype/portal_audit_log/: portal_audit_log.json
zentryx_customer_portal/doctype/portal_internal_allowed_customer/: portal_internal_allowed_customer.py
zentryx_customer_portal/doctype/portal_permission_group/: portal_permission_group.json
zentryx_customer_portal/doctype/portal_sync_log/: portal_sync_log.json
zentryx_customer_portal/doctype/portal_ticket_metadata/: portal_ticket_metadata.py
zentryx_customer_portal/patches/v0_2/: setup_custom_portal_permissions.py
zentryx_customer_portal/patches/v0_4/: setup_department_access.py
zentryx_customer_portal/public/css/: portal.css
zentryx_customer_portal/public/js/: portal.js
zentryx_customer_portal/tests/: test_permissions.py
zentryx_customer_portal/www/: portal.html  portal.py
zentryx_customer_portal/zentryx_customer_portal/: api.py  desktop.py  install.py  modules.txt  patches.txt  permissions.py  portal.py  sync.py
zentryx_customer_portal/zentryx_customer_portal/www/: portal.html
(+30 files in other folders)
